projects/EventsApi/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-api
  namespace: events-api
spec:
  selector:
    app: events-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
